<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/llSignContainer"
    android:visibility="gone"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            style="@style/AppTextStyle"
            android:inputType="textEmailAddress"
            android:maxLength="50" />

        <EditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            style="@style/AppTextStyle"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:maxLength="16" />

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:minHeight="50dp"
                android:onClick="signin"
                android:text="@string/sign_in"
                style="@style/SignTextStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:minWidth="100dp"
                android:minHeight="50dp"
                android:onClick="signup"
                style="@style/SignTextStyle"
                android:text="@string/sign_up" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_forgot_password"
            style="@style/AppTextStyle"
            android:textSize="16sp"
            android:onClick="forgotPassword"/>

    </LinearLayout>

</LinearLayout>